# wax-beginner-project

./: CMakeLists.txt  README.txt  addcode.sh  deploy.sh  test.sh
include/: test_withdraw.hpp
src/: CMakeLists.txt  test_withdraw.cpp
